--- a/index.html
+++ b/index.html
@@ -96,14 +96,16 @@
       <h1>FIMA</h1>
       <nav>
         <ul>
-          <li><a href="index.html" class="active">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="designers.html">Designers</a></li>
           <li><a href="artistes.html">Artistes</a></li>
           <li><a href="concours.html">Concours</a></li>
           <li><a href="billetterie.html">Billetterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
-          <li><a href="alphadi.html">Alphadi</a></li>
+          <li><a href="fondateur.html" class="active">Alphadi</a></li>
+          <li><a href="histoire.html">Histoire</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="presse.html">Presse</a></li>
         </ul>
       </nav>
     </div>
