--- a/contact.html
+++ b/contact.html
@@ -2,114 +2,73 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FIMA - Festival International de la Mode Africaine</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact - FIMA</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
     body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #fefefe;
-      color: #111;
-      line-height: 1.6;
+      margin: 0; font-family: 'Inter', sans-serif; background: #fff; color: #111;
     }
     header {
-      background-color: #fff;
-      border-bottom: 1px solid #eee;
-      padding: 1rem 0;
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      position: sticky; top: 0; background: #fff; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      z-index: 1000;
     }
     .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      max-width: 1200px; margin: 0 auto; padding: 0 1rem;
+      display: flex; align-items: center; justify-content: space-between; height: 60px;
     }
     h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2rem;
-      color: #111;
-      margin: 0;
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 1.8rem; margin: 0; color: #111;
     }
     nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      gap: 1.5rem;
+      list-style: none; display: flex; gap: 1.5rem; margin: 0; padding: 0;
     }
     nav a {
-      text-decoration: none;
-      color: #444;
-      font-weight: 500;
-      transition: color 0.3s ease;
+      font-weight: 600; font-size: 1rem; padding: 0.5rem 0; color: #555;
+      border-bottom: 3px solid transparent; transition: border-color 0.3s, color 0.3s;
     }
     nav a:hover, nav a.active {
-      color: #000;
+      color: #000; border-bottom-color: #000;
     }
-    .hero {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      align-items: center;
-      padding: 4rem 0;
-      background-color: #faf9f6;
+    main {
+      max-width: 600px; margin: 4rem auto; padding: 0 1rem;
     }
-    .hero-image img {
-      width: 100%;
-      height: auto;
-      border-radius: 1rem;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    h2 {
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 2.5rem; margin-bottom: 2rem; text-align: center;
     }
-    .hero-content {
-      padding: 2rem;
+    form {
+      display: flex; flex-direction: column; gap: 1.25rem;
+      background: #fafafa; padding: 2rem; border-radius: 1rem;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
     }
-    .hero-content h2 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+    label {
+      font-weight: 600; color: #222;
     }
-    .hero-content p {
-      font-size: 1.1rem;
-      margin-bottom: 1.5rem;
+    input, textarea {
+      padding: 0.75rem 1rem;
+      border-radius: 0.5rem;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      transition: border-color 0.3s;
+      resize: vertical;
     }
-    .button {
+    input:focus, textarea:focus {
+      outline: none;
+      border-color: #000;
+    }
+    button {
       background-color: #000;
       color: #fff;
-      padding: 0.75rem 1.5rem;
-      border-radius: 2rem;
-      text-decoration: none;
-      font-weight: bold;
+      font-weight: 700;
+      padding: 1rem;
+      border: none;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      cursor: pointer;
       transition: background-color 0.3s ease;
     }
-    .button:hover {
-      background-color: #333;
-    }
-    .intro {
-      padding: 4rem 0;
-      background-color: #fff;
-    }
-    .intro h3 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-    .intro p {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: center;
-    }
-    footer {
-      background-color: #111;
-      color: #fff;
-      padding: 1rem 0;
-      text-align: center;
-      font-size: 0.9rem;
+    button:hover {
+      background-color: #444;
     }
   </style>
 </head>
@@ -119,39 +78,41 @@
       <h1>FIMA</h1>
       <nav>
         <ul>
-          <li><a href="index.html" class="active">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="designers.html">Designers</a></li>
           <li><a href="artistes.html">Artistes</a></li>
           <li><a href="concours.html">Concours</a></li>
           <li><a href="billetterie.html">Billetterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="alphadi.html">Alphadi</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
+  <main>
+    <h2>Contactez-nous</h2>
+    <form id="contactForm" action="#" method="POST">
+      <label for="name">Nom complet</label>
+      <input type="text" id="name" name="name" placeholder="Votre nom complet" required />
 
-  <main class="hero">
-    <div class="hero-image">
-      <img src="images/imageFima1.png" alt="FIMA Accueil">
-    </div>
-    <div class="hero-content">
-      <h2>Festival International de la Mode Africaine</h2>
-      <p>Un rendez-vous incontournable de la créativité africaine fondé par le célèbre styliste Alphadi. Découvrez les plus grands créateurs, les artistes émergents et l’esprit du luxe afro-chic.</p>
-      <a href="billetterie.html" class="button">Réservez vos places</a>
-    </div>
+      <label for="email">Adresse e-mail</label>
+      <input type="email" id="email" name="email" placeholder="exemple@mail.com" required />
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="5" placeholder="Votre message" required></textarea>
+
+      <button type="submit">Envoyer</button>
+    </form>
   </main>
 
-  <section class="intro">
-    <div class="container">
-      <h3>Bienvenue au FIMA</h3>
-      <p>Le FIMA met en lumière le meilleur de la mode africaine, en réunissant créateurs, stylistes, artistes, musiciens, photographes et passionnés venus du monde entier. Plus qu’un défilé, c’est un mouvement culturel et une vitrine pour la paix par la créativité.</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 FIMA - Tous droits réservés. Conçu avec passion pour l’Afrique et ses talents.</p>
-  </footer>
+  <script>
+    const form = document.getElementById('contactForm');
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      alert('Merci pour votre message ! Nous vous répondrons rapidement.');
+      form.reset();
+    });
+  </script>
 </body>
 </html>
