--- a/index.html
+++ b/index.html
@@ -6,87 +6,163 @@
   <title>FIMA - Festival International de la Mode Africaine</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
+    /* Reset & base */
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0; font-family: 'Inter', sans-serif; background: #fff; color: #111;
+      line-height: 1.6;
     }
+    a {
+      color: #000; text-decoration: none; transition: color 0.3s ease;
+    }
+    a:hover {
+      color: #444;
+    }
+    /* Header */
     header {
-      position: sticky; top: 0; background: #fff; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      z-index: 1000;
+      position: fixed; top: 0; left: 0; right: 0;
+      background: rgba(255 255 255 / 0.95);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      z-index: 10000;
     }
     .container {
       max-width: 1200px; margin: 0 auto; padding: 0 1rem;
-      display: flex; align-items: center; justify-content: space-between; height: 60px;
+      display: flex; justify-content: space-between; align-items: center; height: 60px;
     }
-    h1 {
-      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 1.8rem; margin: 0; color: #111;
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-weight: 700;
+      font-size: 1.8rem;
+      margin: 0;
+      color: #111;
+      user-select: none;
     }
     nav ul {
-      list-style: none; display: flex; gap: 1.5rem; margin: 0; padding: 0;
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      margin: 0;
+      padding: 0;
     }
     nav a {
-      font-weight: 600; font-size: 1rem; padding: 0.5rem 0; color: #555;
-      border-bottom: 3px solid transparent; transition: border-color 0.3s, color 0.3s;
+      font-weight: 600;
+      font-size: 1rem;
+      padding: 0.5rem 0;
+      border-bottom: 3px solid transparent;
     }
-    nav a:hover, nav a.active {
-      color: #000; border-bottom-color: #000;
+    nav a.active,
+    nav a:hover {
+      border-bottom-color: #000;
     }
-    .hero-video {
-      position: relative; height: 70vh; overflow: hidden;
+    /* Hero video */
+    .hero {
+      position: relative;
+      height: 80vh;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      text-align: center;
+      padding: 0 1rem;
+      margin-top: 60px; /* Header height */
     }
-    .hero-video video {
-      position: absolute; top: 50%; left: 50%;
-      min-width: 100%; min-height: 100%;
-      width: auto; height: auto; transform: translate(-50%, -50%);
-      z-index: -1; filter: brightness(0.6);
+    .hero video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      filter: brightness(0.5);
+      object-fit: cover;
     }
     .hero-content {
-      position: relative; z-index: 1;
-      max-width: 700px; margin: 0 auto; padding: 6rem 1rem; color: #fff;
-      text-align: center;
+      max-width: 700px;
+      z-index: 2;
     }
     .hero-content h2 {
-      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 3rem; margin-bottom: 1rem;
+      font-family: 'Playfair Display', serif;
+      font-weight: 700;
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.6);
     }
     .hero-content p {
-      font-size: 1.3rem; margin-bottom: 2rem;
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      text-shadow: 0 1px 4px rgba(0,0,0,0.5);
     }
-    .button {
-      background-color: #fff; color: #111; padding: 1rem 2.5rem; border-radius: 50px;
-      font-weight: 700; font-size: 1rem; text-decoration: none; box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    .hero-content a.button {
+      background: #000;
+      color: #fff;
+      padding: 1rem 2.5rem;
+      border-radius: 50px;
+      font-weight: 700;
+      font-size: 1.1rem;
+      text-transform: uppercase;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+      display: inline-block;
       transition: background-color 0.3s ease;
     }
-    .button:hover {
-      background-color: #eee;
+    .hero-content a.button:hover {
+      background: #444;
     }
-    section.videos-fima {
-      max-width: 1200px; margin: 4rem auto; padding: 0 1rem;
+    /* Sections */
+    main {
+      max-width: 1000px;
+      margin: 4rem auto 6rem;
+      padding: 0 1rem;
     }
-    section.videos-fima h3 {
-      font-family: 'Playfair Display', serif; font-weight: 600; font-size: 2rem; margin-bottom: 2rem;
+    .intro {
+      margin-bottom: 3rem;
       text-align: center;
+      font-size: 1.1rem;
+      color: #333;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+    .feature {
+      background: #fafafa;
+      border-radius: 1rem;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+      padding: 2rem 1.5rem;
+      text-align: center;
+      transition: box-shadow 0.3s ease;
+    }
+    .feature:hover {
+      box-shadow: 0 6px 25px rgba(0,0,0,0.1);
+    }
+    .feature h3 {
+      font-family: 'Playfair Display', serif;
+      font-weight: 700;
+      margin-bottom: 1rem;
       color: #111;
     }
-    .video-container {
-      display: flex; gap: 2rem; flex-wrap: wrap; justify-content: center;
+    .feature p {
+      color: #555;
+      font-size: 1rem;
+      line-height: 1.5;
     }
-    .video-container iframe {
-      flex: 1 1 350px;
-      height: 200px;
-      border: none;
-      border-radius: 1rem;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
+    /* Footer */
     footer {
-      background-color: #111; color: #eee; text-align: center; padding: 1rem 1rem; font-size: 0.9rem;
-      margin-top: 4rem;
-    }
-    @media (max-width: 768px) {
-      .hero-content h2 {
-        font-size: 2rem;
-      }
-      .video-container iframe {
-        height: 180px;
-      }
+      background: #111;
+      color: #eee;
+      padding: 1.5rem 1rem;
+      text-align: center;
+      font-size: 0.9rem;
     }
   </style>
 </head>
@@ -96,43 +172,69 @@
       <h1>FIMA</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li><a href="index.html" class="active">Accueil</a></li>
           <li><a href="designers.html">Designers</a></li>
           <li><a href="artistes.html">Artistes</a></li>
           <li><a href="concours.html">Concours</a></li>
           <li><a href="billetterie.html">Billetterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
-          <li><a href="fondateur.html" class="active">Alphadi</a></li>
-          <li><a href="histoire.html">Histoire</a></li>
+          <li><a href="fondateur.html">Alphadi</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="presse.html">Presse</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main role=\"main\">
-   <section class="hero-video" aria-label="Vidéo du Festival International de la Mode Africaine en background" style="position: relative; height: 70vh; overflow: hidden;">
-  <iframe
-    src="https://www.youtube.com/embed/Ww8magjkEfQ?autoplay=1&mute=1&loop=1&playlist=Ww8magjkEfQ&controls=0&showinfo=0&rel=0&modestbranding=1"
-    title="Vidéo FIMA"
-    frameborder="0"
-    allow="autoplay; fullscreen"
-    allowfullscreen
-    style="position: absolute; top: 50%; left: 50%; width: 177.78vh; height: 100vh; transform: translate(-50%, -50%); pointer-events: none; z-index: -1;">
-  </iframe>
-  <div style="position: relative; z-index: 1; max-width: 700px; margin: 0 auto; padding: 6rem 1rem; color: #fff; text-align: center; background: rgba(0, 0, 0, 0.4); border-radius: 1rem;">
-    <h2 style="font-family: 'Playfair Display', serif; font-weight: 700; font-size: 3rem; margin-bottom: 1rem;">Festival International de la Mode Africaine</h2>
-    <p style="font-size: 1.3rem; margin-bottom: 2rem;">Un rendez-vous incontournable de la créativité africaine fondé par le célèbre styliste Alphadi. Découvrez les plus grands créateurs, les artistes émergents et l’esprit du luxe afro-chic.</p>
-    <a href="billetterie.html" class="button" style="background-color: #fff; color: #111; padding: 1rem 2.5rem; border-radius: 50px; font-weight: 700; font-size: 1rem; text-decoration: none; box-shadow: 0 5px 15px rgba(0,0,0,0.2); transition: background-color 0.3s ease;">Réservez vos places</a>
-  </div>
-</section>
-
+  <main>
+    <section class="hero" aria-label="Vidéo de présentation du FIMA">
       <video autoplay muted loop playsinline>
-        <source src=\"videos/fima-promo.mp4\" type=\"video/mp4\" />
-        <!-- Fallback -->
-        Votre navigateur ne supporte pas la vidéo HTML5.
+        <source src="https://www.youtube.com/embed/Ww8magjkEfQ?autoplay=1&mute=1&loop=1" type="video/mp4" />
+        <!-- Fallback message -->
+        Votre navigateur ne supporte pas la vidéo.
       </video>
-      <div class=\"hero-content\">
+      <div class="hero-content">
         <h2>Festival International de la Mode Africaine</h2>
-        <p>Un rendez-vous incontournable de la créativité afric
+        <p>Un rendez-vous incontournable de la créativité africaine, fondé par le légendaire styliste Alphadi. Découvrez les plus grands créateurs, artistes et l’esprit du luxe afro-chic.</p>
+        <a href="billetterie.html" class="button" aria-label="Réserver vos places">Réservez vos places</a>
+      </div>
+    </section>
+
+    <section class="intro" aria-label="Présentation du FIMA">
+      <p>
+        Le FIMA célèbre la richesse culturelle et la créativité des talents africains, réunissant designers, artistes, musiciens et passionnés du monde entier. Plus qu’un festival, c’est un mouvement culturel porteur de paix et d’innovation.
+      </p>
+    </section>
+
+    <section class="features" aria-label="Sections principales du site">
+      <article class="feature" tabindex="0">
+        <h3><a href="designers.html">Designers</a></h3>
+        <p>Découvrez les créateurs de mode mis en avant par le FIMA, véritables artisans du style afro-chic.</p>
+      </article>
+      <article class="feature" tabindex="0">
+        <h3><a href="artistes.html">Artistes</a></h3>
+        <p>Les talents artistiques qui accompagnent la mode africaine : musiciens, photographes, performeurs.</p>
+      </article>
+      <article class="feature" tabindex="0">
+        <h3><a href="concours.html">Concours</a></h3>
+        <p>Le déroulé des concours de créateurs, avec la sélection des talents les plus prometteurs.</p>
+      </article>
+      <article class="feature" tabindex="0">
+        <h3><a href="billetterie.html">Billetterie</a></h3>
+        <p>Réservez vos billets en ligne pour vivre l’expérience unique du FIMA en direct.</p>
+      </article>
+      <article class="feature" tabindex="0">
+        <h3><a href="apropos.html">À propos</a></h3>
+        <p>Plongez dans l’histoire du FIMA et découvrez les moments forts des éditions précédentes.</p>
+      </article>
+      <article class="feature" tabindex="0">
+        <h3><a href="fondateur.html">Alphadi</a></h3>
+        <p>Rencontrez le fondateur visionnaire du FIMA, pilier de la mode africaine contemporaine.</p>
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 FIMA – Tous droits réservés. Conçu avec passion pour l’Afrique et ses talents.</p>
+  </footer>
+</body>
+</html>
