--- a/billeterie.html
+++ b/billeterie.html
@@ -87,7 +87,7 @@
           <li><a href="designers.html">Designers</a></li>
           <li><a href="artistes.html">Artistes</a></li>
           <li><a href="concours.html">Concours</a></li>
-          <li><a href="billetterie.html" class="active">Billetterie</a></li>
+          <li><a href="billeterie.html" class="active">Billeterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="alphadi.html">Alphadi</a></li>
           <li><a href="contact.html">Contact</a></li>
