--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     nav a:hover {
       border-bottom-color: #000;
     }
-    /* Hero video */
+    /* Hero with YouTube iframe background */
     .hero {
       position: relative;
       height: 80vh;
@@ -67,20 +67,20 @@
       color: #fff;
       text-align: center;
       padding: 0 1rem;
-      margin-top: 60px; /* Header height */
+      margin-top: 60px; /* header height */
     }
-    .hero video {
+    .hero iframe {
       position: absolute;
       top: 50%;
       left: 50%;
-      min-width: 100%;
-      min-height: 100%;
-      width: auto;
-      height: auto;
+      width: 120vw;  /* Slightly larger to cover */
+      height: 67.5vw; /* 16:9 ratio */
+      min-height: 100vh;
+      min-width: 177.78vh; /* 16:9 ratio based on height */
       transform: translate(-50%, -50%);
       z-index: -1;
-      filter: brightness(0.5);
-      object-fit: cover;
+      pointer-events: none;
+      filter: brightness(0.45);
     }
     .hero-content {
       max-width: 700px;
@@ -91,12 +91,12 @@
       font-weight: 700;
       font-size: 3rem;
       margin-bottom: 1rem;
-      text-shadow: 0 2px 6px rgba(0,0,0,0.6);
+      text-shadow: 0 2px 6px rgba(0,0,0,0.7);
     }
     .hero-content p {
       font-size: 1.2rem;
       margin-bottom: 2rem;
-      text-shadow: 0 1px 4px rgba(0,0,0,0.5);
+      text-shadow: 0 1px 4px rgba(0,0,0,0.6);
     }
     .hero-content a.button {
       background: #000;
@@ -127,6 +127,45 @@
       max-width: 700px;
       margin-left: auto;
       margin-right: auto;
+    }
+    .programme {
+      max-width: 1000px;
+      margin: 3rem auto 4rem;
+      padding: 2rem 2rem 2rem 2rem;
+      background: #fafafa;
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+    }
+    .programme h3 {
+      font-family: 'Playfair Display', serif;
+      font-weight: 700;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      text-align: center;
+      color: #111;
+    }
+    .programme-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 2rem;
+    }
+    .programme article h4 {
+      font-family: 'Playfair Display', serif;
+      font-weight: 600;
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+      color: #222;
+    }
+    .programme ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      color: #444;
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+    .programme ul li {
+      margin-bottom: 0.75rem;
     }
     .features {
       display: grid;
@@ -164,21 +203,34 @@
       text-align: center;
       font-size: 0.9rem;
     }
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      .hero-content h2 {
+        font-size: 2rem;
+      }
+      .hero-content p {
+        font-size: 1rem;
+      }
+      nav ul {
+        gap: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container" role="banner">
       <h1>FIMA</h1>
-      <nav>
+      <nav role="navigation" aria-label="Menu principal">
         <ul>
           <li><a href="index.html" class="active">Accueil</a></li>
           <li><a href="designers.html">Designers</a></li>
           <li><a href="artistes.html">Artistes</a></li>
           <li><a href="concours.html">Concours</a></li>
-          <li><a href="billetterie.html">Billetterie</a></li>
+          <li><a href="billeterie.html">Billeterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="fondateur.html">Alphadi</a></li>
+          <li><a href="presse.html">Presse</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -187,11 +239,12 @@
 
   <main>
     <section class="hero" aria-label="Vidéo de présentation du FIMA">
-      <video autoplay muted loop playsinline>
-        <source src="https://www.youtube.com/embed/Ww8magjkEfQ?autoplay=1&mute=1&loop=1" type="video/mp4" />
-        <!-- Fallback message -->
-        Votre navigateur ne supporte pas la vidéo.
-      </video>
+      <iframe 
+        src="https://www.youtube.com/embed/Ww8magjkEfQ?autoplay=1&mute=1&loop=1&playlist=Ww8magjkEfQ&controls=0&modestbranding=1&showinfo=0&rel=0" 
+        title="Vidéo du Festival International de la Mode Africaine"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen
+        loading="lazy"
+        ></iframe>
       <div class="hero-content">
         <h2>Festival International de la Mode Africaine</h2>
         <p>Un rendez-vous incontournable de la créativité africaine, fondé par le légendaire styliste Alphadi. Découvrez les plus grands créateurs, artistes et l’esprit du luxe afro-chic.</p>
@@ -203,6 +256,36 @@
       <p>
         Le FIMA célèbre la richesse culturelle et la créativité des talents africains, réunissant designers, artistes, musiciens et passionnés du monde entier. Plus qu’un festival, c’est un mouvement culturel porteur de paix et d’innovation.
       </p>
+    </section>
+
+    <section class="programme" aria-label="Programme quotidien du FIMA du 13 au 15 décembre">
+      <h3>Programme Quotidien - 13 au 15 décembre</h3>
+      <div class="programme-grid">
+        <article>
+          <h4>13 Décembre</h4>
+          <ul>
+            <li><strong>10h00 - 12h00 :</strong> Ouverture officielle & discours d'Alphadi</li>
+            <li><strong>14h00 - 17h00 :</strong> Défilés des créateurs émergents</li>
+            <li><strong>19h00 - 21h00 :</strong> Concert live et performances artistiques</li>
+          </ul>
+        </article>
+        <article>
+          <h4>14 Décembre</h4>
+          <ul>
+            <li><strong>09h30 - 12h30 :</strong> Ateliers et masterclass avec designers</li>
+            <li><strong>14h00 - 18h00 :</strong> Concours des jeunes créateurs</li>
+            <li><strong>20h00 - 22h00 :</strong> Soirée gala & remise des prix</li>
+          </ul>
+        </article>
+        <article>
+          <h4>15 Décembre</h4>
+          <ul>
+            <li><strong>10h00 - 13h00 :</strong> Expositions & rencontres professionnelles</li>
+            <li><strong>15h00 - 18h00 :</strong> Défilé des collections finales</li>
+            <li><strong>19h00 - 21h00 :</strong> Clôture & soirée networking</li>
+          </ul>
+        </article>
+      </div>
     </section>
 
     <section class="features" aria-label="Sections principales du site">
@@ -219,7 +302,7 @@
         <p>Le déroulé des concours de créateurs, avec la sélection des talents les plus prometteurs.</p>
       </article>
       <article class="feature" tabindex="0">
-        <h3><a href="billetterie.html">Billetterie</a></h3>
+        <h3><a href="billeterie.html">Billeterie</a></h3>
         <p>Réservez vos billets en ligne pour vivre l’expérience unique du FIMA en direct.</p>
       </article>
       <article class="feature" tabindex="0">
