--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
           <li><a href="concours.html">Concours</a></li>
           <li><a href="billeterie.html">Billeterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
-          <li><a href="fondateur.html">Alphadi</a></li>
           <li><a href="presse.html">Presse</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -310,8 +309,8 @@
         <p>Plongez dans l’histoire du FIMA et découvrez les moments forts des éditions précédentes.</p>
       </article>
       <article class="feature" tabindex="0">
-        <h3><a href="fondateur.html">Alphadi</a></h3>
-        <p>Rencontrez le fondateur visionnaire du FIMA, pilier de la mode africaine contemporaine.</p>
+        <h3><a href="presse.html">Espace Presse</a></h3>
+        <p>texte pour la presse.</p>
       </article>
     </section>
   </main>
