--- a/billeterie.html
+++ b/billeterie.html
@@ -83,13 +83,13 @@
       <h1>FIMA</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li><a href="index.html" class="active">Accueil</a></li>
           <li><a href="designers.html">Designers</a></li>
           <li><a href="artistes.html">Artistes</a></li>
           <li><a href="concours.html">Concours</a></li>
-          <li><a href="billeterie.html" class="active">Billeterie</a></li>
+          <li><a href="billeterie.html">Billeterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
-          <li><a href="alphadi.html">Alphadi</a></li>
+          <li><a href="presse.html">Presse</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
