--- a/presse.html
+++ b/presse.html
@@ -1,75 +1,173 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FIMA - Festival International de la Mode Africaine</title>
-  <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Presse - FIMA</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0; padding: 2rem; max-width: 900px; margin-left: auto; margin-right: auto;
+      background: #fff; color: #111; line-height: 1.6;
+    }
+    h1, h2 {
+      font-family: 'Playfair Display', serif;
+      color: #111;
+      margin-bottom: 1rem;
+      font-weight: 700;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 2rem;
+      font-size: 2.8rem;
+    }
+    h2 {
+      font-size: 2rem;
+      margin-top: 3rem;
+      border-bottom: 2px solid #222;
+      padding-bottom: 0.3rem;
+    }
+    p {
+      font-size: 1.1rem;
+      color: #333;
+      margin-bottom: 1.5rem;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul.articles-list {
+      list-style-type: none;
+      padding-left: 0;
+    }
+    ul.articles-list li {
+      margin-bottom: 1rem;
+    }
+    .resources {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    .resource-item {
+      flex: 1 1 280px;
+      background: #fafafa;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+      padding: 1rem 1.5rem;
+      text-align: center;
+    }
+    .resource-item a {
+      display: inline-block;
+      margin-top: 1rem;
+      background: #000;
+      color: #fff;
+      padding: 0.6rem 1.2rem;
+      border-radius: 40px;
+      font-weight: 700;
+      font-size: 1rem;
+      transition: background-color 0.3s ease;
+    }
+    .resource-item a:hover {
+      background: #444;
+    }
+    .video-embed {
+      margin-top: 1rem;
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 */
+      height: 0;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+    .video-embed iframe {
+      position: absolute;
+      top:0; left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>FIMA</h1>
-      <nav>
-        <a href="#designers">Designers</a>
-        <a href="#artistes">Artistes</a>
-        <a href="#concours">Concours</a>
-        <a href="#billetterie">Billetterie</a>
-        <a href="#apropos">À propos</a>
-      </nav>
-    </div>
-  </header>
 
-  <section class="hero">
-    <div class="overlay">
-      <div class="hero-text">
-        <h2>Festival International de la Mode Africaine</h2>
-        <p>Mode, culture et élégance au cœur de l'Afrique</p>
+  <h1>Espace Presse - FIMA</h1>
+
+  <section aria-label="Communiqués de presse récents">
+    <h2>Communiqués récents</h2>
+    <ul class="articles-list">
+      <li>
+        <a href="https://fima-africa.org/communique2025.pdf" target="_blank" rel="noopener">
+          Communiqué officiel du FIMA 2025 - Lancement de l’édition
+        </a> — 15 juin 2025
+      </li>
+      <li>
+        <a href="https://fima-africa.org/press-release-designer-spotlight.pdf" target="_blank" rel="noopener">
+          Spotlight sur les designers émergents du FIMA 2025
+        </a> — 30 mai 2025
+      </li>
+      <li>
+        <a href="https://fima-africa.org/press-festival-highlights.pdf" target="_blank" rel="noopener">
+          Points forts des éditions précédentes du FIMA
+        </a> — 12 avril 2025
+      </li>
+    </ul>
+  </section>
+
+  <section aria-label="Articles de presse">
+    <h2>Articles de presse sélectionnés</h2>
+    <ul class="articles-list">
+      <li>
+        <a href="https://www.afrikfashionmag.com/fima-2024-alphadi-portrait/" target="_blank" rel="noopener">
+          FIMA 2024 : Alphadi, le Magicien du Désert, à la conquête du monde
+        </a> — Afrik Fashion Mag
+      </li>
+      <li>
+        <a href="https://www.vogue.fr/mode/article/fima-festival-mode-africaine" target="_blank" rel="noopener">
+          Le FIMA, un festival de mode qui transcende les frontières
+        </a> — Vogue France
+      </li>
+      <li>
+        <a href="https://www.jeuneafrique.com/arts-culture/fima-niger-alphadi-mode-africaine/" target="_blank" rel="noopener">
+          Niger : le FIMA, rendez-vous annuel incontournable de la mode africaine
+        </a> — Jeune Afrique
+      </li>
+    </ul>
+  </section>
+
+  <section aria-label="Ressources médias pour la presse">
+    <h2>Ressources médias</h2>
+    <div class="resources">
+      <div class="resource-item">
+        <h3>Logos officiels</h3>
+        <a href="https://fima-africa.org/assets/logos/fima_logo.zip" target="_blank" rel="noopener" download> Télécharger</a>
+      </div>
+      <div class="resource-item">
+        <h3>Photos haute résolution</h3>
+        <a href="https://fima-africa.org/assets/photos/fima_photos.zip" target="_blank" rel="noopener" download> Télécharger</a>
+      </div>
+      <div class="resource-item">
+        <h3>Vidéos officielles</h3>
+        <a href="https://fima-africa.org/assets/videos/fima_videos.zip" target="_blank" rel="noopener" download> Télécharger</a>
       </div>
     </div>
   </section>
 
-  <section id="designers" class="content-section">
-    <div class="container">
-      <h3>Les Designers</h3>
-      <p>FIMA accueille les plus grands noms de la mode africaine et internationale. Découvrez les créateurs emblématiques ainsi que les talents émergents qui font rayonner le continent à travers leurs collections audacieuses.</p>
+  <section aria-label="Vidéo promotionnelle du FIMA">
+    <h2>Vidéo promotionnelle</h2>
+    <div class="video-embed">
+      <iframe 
+        src="https://www.youtube.com/embed/Ww8magjkEfQ" 
+        title="Vidéo promotionnelle FIMA" 
+        allowfullscreen 
+        loading="lazy"
+      ></iframe>
     </div>
   </section>
 
-  <section id="artistes" class="content-section alt">
-    <div class="container">
-      <h3>Les Artistes</h3>
-      <p>Musiciens, performers, plasticiens... le FIMA donne la parole aux artistes pour faire vibrer les scènes du festival. Une programmation éclectique qui relie tradition, modernité et expression libre.</p>
-    </div>
-  </section>
-
-  <section id="concours" class="content-section">
-    <div class="container">
-      <h3>Concours de Jeunes Créateurs</h3>
-      <p>Le FIMA soutient la relève à travers son concours emblématique. Chaque année, de jeunes stylistes venus de toute l’Afrique viennent présenter leur vision et concourent pour une reconnaissance internationale.</p>
-    </div>
-  </section>
-
-  <section id="billetterie" class="content-section alt">
-    <div class="container">
-      <h3>Billetterie</h3>
-      <p>Réservez votre place pour vivre une expérience unique. Plusieurs options disponibles : Pass Journée, Pass Festival, Accès VIP. Bientôt disponible ici !</p>
-    </div>
-  </section>
-
-  <section id="apropos" class="content-section">
-    <div class="container">
-      <h3>À propos du FIMA</h3>
-      <p>Créé en 1998 par le styliste Alphadi, le FIMA est une plateforme culturelle panafricaine majeure, mettant à l’honneur la paix, la jeunesse et la créativité à travers la mode et les arts.</p>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 FIMA. Tous droits réservés.</p>
-    </div>
-  </footer>
 </body>
 </html>
