--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
     <nav>
       <h1>FIMA</h1>
       <ul>
-        <li><a href="index.html" class="active">Accueil</a></li>
-        <li><a href="designers.html">Designers</a></li>
-        <li><a href="artistes.html">Artistes</a></li>
-        <li><a href="concours.html">Concours</a></li>
-        <li><a href="billetterie.html">Billetterie</a></li>
-        <li><a href="apropos.html">À propos</a></li>
-        <li><a href="presse.html">Presse</a></li>
-        <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html" class="active">Accueil</a></li>
+          <li><a href="designers.html">Designers</a></li>
+          <li><a href="artistes.html">Artistes</a></li>
+          <li><a href="concours.html">Concours</a></li>
+          <li><a href="billeterie.html">Billeterie</a></li>
+          <li><a href="apropos.html">À propos</a></li>
+          <li><a href="presse.html">Presse</a></li>
+          <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -225,7 +225,7 @@
     <div class="hero-overlay">
       <h2>Festival International de la Mode Africaine</h2>
       <p>Un rendez-vous unique de la créativité et du luxe afro-chic, fondé par Alphadi.</p>
-      <a href="billetterie.html" class="button" role="button">Réservez vos places</a>
+      <a href="billeterie.html" class="button" role="button">Réservez vos places</a>
     </div>
   </section>
 
